<resources>
    <string name="app_name"> Elderly Companionship </string>
    <string name="register_button"> Register </string>
    <string name="login_button"> Log in </string>
    <string name="login_register_hint"> Enter Your Password </string>
    <string name="email_hint"> Enter Your Email </string>
    <string name="name_hint"> Enter Your Name </string>
    <string name="hobby_add_hint"> Enter Hobby </string>
    <string name="main_activity_login_button"> Go To Login </string>
    <string name="main_activity_register_button"> Go To Register </string>
    <string name="add_hobby_button"> Add Your Hobby </string>
    <string name="add_age_button"> Add Your Age </string>
    <string name="add_details_button"> Add Your Details </string>
    <string name="choose_hobby"> Choose Your Hobby </string>
    <string name="choose_age"> Choose Your Age </string>
    <string name="show_details"> Show Your Details </string>
    <string name="map_show_places"> Show Places on Map </string>
    <string name="show_friends"> Show Your Friends </string>
    <string name="show_events"> Show All Events </string>
    <string name="show_places_map"> Show Places on Map </string>
    <string name="choose_place_on_map"> Choose the Place </string>
    <string name="find_friends_button"> Find Friends </string>
    <string name="events_button"> Events </string>
    <string name="find_events_by_name_button"> Find Events by Name </string>
    <string name="find_events_by_date_button"> Find Events by Date </string>
    <string name="create_events"> Create Events </string>
    <string name="logout_button"> Log Out </string>
    <string name="find_friend_by_hobby"> Find Friends by Hobby </string>
    <string name="find_friend_by_age"> Find Friends by Age </string>
    <string name="find_event"> Find Events to Attend </string>
    <string name="dialog_log_out_message"> Do you want to exit ? </string>
    <string name="dialog_wifi_message"> You need to connect to the Internet, otherwise exit the application </string>
    <string name="dialog_hobby_message"> Enter your hobby </string>
    <string name="dialog_button_yes"> Yes </string>
    <string name="dialog_button_no"> No </string>
    <string name="dialog_button_ok"> OK </string>
    <string name="list_of_friends"> List of Your Friends </string>
    <string name="list_of_events"> List of Events </string>
    <string name="date_chooser"> Choose the Date of Event </string>
    <string name="number_chooser"> Number of Days </string>
    <string name="date_event_selector"> Set the Date of Event </string>
    <string name="time_event_selector"> Set the Time of Event </string>
    <string name="venue_event_selector"> Set the Address of Event </string>
    <string name="add_event_name"> Add Event Name </string>
    <string name="create_event"> Add Event </string>
    <string name="go_to_add_event_date"> Go To Add Event Date </string>
    <string name="go_to_add_event_time"> Go To Add Event Time </string>
    <string name="go_to_add_event_venue"> Go To Add Event Venue </string>
    <string name="event_street_hint"> Enter Street Name  </string>

    <!-- KEYBOARD STRINGS -->
    <string name="keyboard_go"> Go </string>
    <string name="keyboard_next"> Next </string>
    <string name="keyboard_send"> Send </string>

    <!-- *************************************************************************************** -->
    <!-- ******************** Array of Strings of possible hobbies ***************************** -->
    <!-- *************************************************************************************** -->
    <string-array name = "hobby_array">
        <item> Boating </item>
        <item> Books </item>
        <item> Bowling </item>
        <item> Cars </item>
        <item> Chess </item>
        <item> Computers </item>
        <item> Cooking </item>
        <item> Crafts </item>
        <item> Crosswords </item>
        <item> Cycling </item>
        <item> Film </item>
        <item> Fishing </item>
        <item> Football </item>
        <item> Gardening </item>
        <item> Golf </item>
        <item> Hiking </item>
        <item> Music </item>
        <item> Painting </item>
        <item> Photography </item>
        <item> Rugby </item>
        <item> Sport </item>
        <item> Snooker </item>
        <item> Swimming </item>
        <item> Tennis </item>
        <item> Theatre </item>
    </string-array>

    <!-- *************************************************************************************** -->
    <!-- ******************** Array of Strings of possible events ****************************** -->
    <!-- *************************************************************************************** -->
    <string-array name = "event_array">
        <item> Bingo </item>
        <item> Bowling </item>
        <item> Cinema </item>
        <item> Coffee-Shop </item>
        <item> Dancing </item>
        <item> Dogs-Racing </item>
        <item> Gardening </item>
        <item> Golf </item>
        <item> Horse-Racing </item>
        <item> Museum </item>
        <item> Quiz </item>
        <item> Restaurant </item>
        <item> Shopping </item>
        <item> Swimming-Pool </item>
        <item> Theatre </item>
        <item> Yoga </item>
        <item> Zoo </item>
    </string-array>

    <!-- *************************************************************************************** -->
    <!-- ******************** Array of Strings of places on map ******************************** -->
    <!-- *************************************************************************************** -->
    <string-array name = "map_array">
        <item> Cinema </item>
        <item> Museum </item>
        <item> Restaurant </item>
        <item> Theatre </item>
    </string-array>

    <!-- *************************************************************************************** -->
    <!-- ******************** Array of ranges of an age **************************************** -->
    <!-- *************************************************************************************** -->
    <string-array name = "age_array">
        <item> 60 </item>
        <item> 61 </item>
        <item> 62 </item>
        <item> 63 </item>
        <item> 64 </item>
        <item> 65 </item>
        <item> 66 </item>
        <item> 67 </item>
        <item> 68 </item>
        <item> 69 </item>
        <item> 70 </item>
        <item> 71 </item>
        <item> 72 </item>
        <item> 73 </item>
        <item> 74 </item>
        <item> 75 </item>
        <item> 76 </item>
        <item> 77 </item>
        <item> 78 </item>
        <item> 79 </item>
        <item> 80 </item>
        <item> 81 </item>
        <item> 82 </item>
        <item> 83 </item>
        <item> 84 </item>
        <item> 85 </item>
        <item> 86 </item>
        <item> 87 </item>
        <item> 88 </item>
        <item> 89 </item>
        <item> 90 </item>
    </string-array>

    <!-- *************************************************************************************** -->
    <!-- ******************** Array of Irish cities ******************************************** -->
    <!-- *************************************************************************************** -->
    <string-array name = "city_array">
        <item> Arklow </item>
        <item> Athlone </item>
        <item> Balbriggan </item>
        <item> Bray </item>
        <item> Carlow </item>
        <item> Cavan </item>
        <item> Celbrige </item>
        <item> Clonmel </item>
        <item> Cork </item>
        <item> Drogheda </item>
        <item> Dublin </item>
        <item> Dundalk </item>
        <item> Ennis </item>
        <item> Galway </item>
        <item> Greystones </item>
        <item> Kildare </item>
        <item> Kilkenny </item>
        <item> Killarney </item>
        <item> Leixlip </item>
        <item> Letterkenny </item>
        <item> Limerick </item>
        <item> Malahide </item>
        <item> Maynooth </item>
        <item> Mullingar </item>
        <item> Naas </item>
        <item> Navan </item>
        <item> Newbridge </item>
        <item> Portlaoise </item>
        <item> Portmarnock </item>
        <item> Sligo </item>
        <item> Swords </item>
        <item> Tipperary </item>
        <item> Tralee </item>
        <item> Waterford </item>
        <item> Wexford </item>
        <item> Wicklow </item>
    </string-array>

    <!-- *************************************************************************************** -->
    <!-- ******************** Array of Irish cities ******************************************** -->
    <!-- *************************************************************************************** -->
    <string-array name = "dublin_regions_array">
        <item> Dublin 1 </item>
        <item> Dublin 2 </item>
        <item> Dublin 3 </item>
        <item> Dublin 4 </item>
        <item> Dublin 5 </item>
        <item> Dublin 6 </item>
        <item> Dublin 7 </item>
        <item> Dublin 8 </item>
        <item> Dublin 9 </item>
        <item> Dublin 10 </item>
        <item> Dublin 11 </item>
        <item> Dublin 12 </item>
        <item> Dublin 13 </item>
        <item> Dublin 14 </item>
        <item> Dublin 15 </item>
        <item> Dublin 16 </item>
        <item> Dublin 17 </item>
        <item> Dublin 18 </item>
        <item> Dublin 19 </item>
        <item> Dublin 20 </item>
        <item> Dublin 21 </item>
        <item> Dublin 22 </item>
        <item> Dublin 23 </item>
        <item> Dublin 24 </item>
    </string-array>

    <!-- *************************************************************************************** -->
    <!-- ******************** Array of Irish cities ******************************************** -->
    <!-- *************************************************************************************** -->
    <string-array name = "number_of_days_array">
        <item> 0 </item>
        <item> 1 </item>
        <item> 2 </item>
        <item> 3 </item>
        <item> 4 </item>
        <item> 5 </item>
        <item> 6 </item>
        <item> 7 </item>
        <item> 8 </item>
        <item> 9 </item>
        <item> 10 </item>
        <item> 11 </item>
        <item> 12 </item>
        <item> 13 </item>
        <item> 14 </item>
    </string-array>

</resources>