<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.torres.companionshipapp.ProfilePage">

    <TextView
        android:id="@+id/shown_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/twenty_eight_sp"
        android:textColor="@color/red" />

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/shown_date_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/twenty_eight_sp"
            android:textColor="@color/red" />

        <Button
            android:layout_margin="@dimen/sixteen_dp"
            android:id="@+id/button_add_hobby"
            android:text="@string/add_details_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@drawable/button_radius" />

        <Button
            android:layout_margin="@dimen/sixteen_dp"
            android:id="@+id/button_delete_hobby"
            android:text="@string/show_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@drawable/button_radius" />

        <Button
            android:layout_margin="@dimen/sixteen_dp"
            android:id="@+id/profile_page_button_find_friends"
            android:text="@string/find_friends_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@drawable/button_radius" />

        <Button
            android:layout_margin="@dimen/sixteen_dp"
            android:id="@+id/profile_page_button_find_events"
            android:text="@string/events_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@drawable/button_radius" />

        <Button
            android:layout_margin="@dimen/sixteen_dp"
            android:id="@+id/button_logout"
            android:text="@string/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@drawable/button_logout" />
    </LinearLayout>

</RelativeLayout>