<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context="com.torres.companionshipapp.DetailsHolder">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_margin="@dimen/sixteen_dp"
            android:id="@+id/show_friends_button"
            android:text="@string/show_friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@drawable/button_radius" />

        <Button
            android:layout_margin="@dimen/sixteen_dp"
            android:id="@+id/places_map_button"
            android:text="@string/show_places_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@drawable/button_radius" />

        <Button
            android:layout_margin="@dimen/sixteen_dp"
            android:id="@+id/show_events_button"
            android:text="@string/show_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@drawable/button_radius" />
    </LinearLayout>
</RelativeLayout>