<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context="com.torres.companionshipapp.EventsHolder">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_margin="@dimen/sixteen_dp"
            android:id="@+id/create_event"
            android:text="@string/create_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@drawable/button_radius" />

        <Button
            android:layout_margin="@dimen/sixteen_dp"
            android:id="@+id/find_event_by_name"
            android:text="@string/find_events_by_name_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@drawable/button_radius" />

        <Button
            android:layout_margin="@dimen/sixteen_dp"
            android:id="@+id/find_event_by_date"
            android:text="@string/find_events_by_date_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@drawable/button_radius" />
    </LinearLayout>

</RelativeLayout>