<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.torres.companionshipapp.Login">

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_margin="@dimen/sixteen_dp"
            android:hint="@string/email_hint"
            android:id="@+id/edit_text_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textColorHint="@color/red"
            android:background="@drawable/edit_text_border" />

        <EditText
            android:layout_margin="@dimen/sixteen_dp"
            android:hint="@string/login_register_hint"
            android:id="@+id/edit_text_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textColorHint="@color/red"
            android:background="@drawable/edit_text_border" />

        <Button
            android:layout_margin="@dimen/sixteen_dp"
            android:id="@+id/button_login"
            android:text="@string/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:background="@drawable/button_radius" />

        <ProgressBar
            android:id="@+id/login_progress_bar"
            android:theme="@style/AppTheme.WhiteAccent"
            android:layout_width="@dimen/eighty_dp"
            android:layout_height="@dimen/eighty_dp"
            android:layout_marginTop="@dimen/forty_dp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</RelativeLayout>