<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context="com.torres.companionshipapp.EventsFinderDateHolder">

    <Button
        android:id="@+id/find_events_by_date"
        android:text="@string/find_events_by_date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/button_radius"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/text_view_date_chooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_chooser"
        android:textSize="28sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="14dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <DatePicker
        android:theme="@style/AppTheme.WhiteAccent.DatePicker"
        android:id="@+id/date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/date_picker_style"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/text_view_date_chooser"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/text_view_number_chooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_chooser"
        android:textSize="28sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/date_picker"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/event_number_spinner"
        android:entries="@array/number_of_days_array"
        android:layout_below="@+id/text_view_number_chooser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

</RelativeLayout>